src/objects/inscor__File_Type__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>File Type</label>
    <nameField>
        <label>File Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>